# kandinsky.cpp

./: .gitignore  CMakeLists.txt  README.md  build_cuda.bat
examples/cli/: main.cpp
include/: kandinsky.h
scripts/: convert_to_gguf.py
src/: name_conversion.cpp  name_conversion.hpp  pipeline.cpp  pipeline.hpp  rng.hpp  rope.hpp  util.hpp
src/core/: executor.hpp  model_loader.cpp  model_loader.hpp  module.hpp  ops.hpp
src/models/: clip.hpp  crossdit.hpp  qwen.hpp  qwen_tokenizer.hpp  vae.hpp  vae3d.hpp
src/sampling/: sampler.hpp  scheduler.hpp
